--- a/package.json
+++ b/package.json
@@ -1,58 +1,125 @@
 {
-  "name": "test-with-router",
-  "version": "0.0.1",
-  "dependencies": {},
+  "name": "karma-test",
   "scripts": {
-    "start": "live-server"
+    "start": "gulp serve",
+    "build": "gulp build",
+    "jshint": "gulp jshint",
+    "htmlhint": "gulp htmlhint",
+    "test": "gulp karma",
+    "test-unit": "npm test",
+    "test-e2e": "gulp test:e2e",
+    "outdated": "npm outdated --depth 0",
+    "deploy": "gulp gh-pages",
+    "postinstall": "jspm install",
+    "postmerge": "npm install",
+    "prepush": "npm shrinkwrap --dev",
+    "metrics:compile_source": "./node_modules/.bin/babel --optional runtime --stage=1 src/ --out-dir build/metrics/src",
+    "metrics": "npm run metrics:compile_source && ./node_modules/.bin/plato -r -l .jshintrc -d build/metrics/report build/metrics/src"
   },
   "devDependencies": {
     "argv": "0.0.2",
     "babel": "5.8.23",
-    "browser-sync": "2.1.4",
+    "babel-core": "^5.8.34",
+    "browser-sync": "2.9.11",
+    "connect-modrewrite": "0.8.2",
+    "conventional-changelog": "0.5.1",
+    "del": "2.0.2",
     "gulp": "3.9.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-bump": "1.0.0",
     "gulp-bytediff": "1.0.0",
+    "gulp-cache": "0.3.0",
+    "gulp-cdnizer": "1.1.6",
+    "gulp-changed": "1.3.0",
+    "gulp-concat": "2.6.0",
+    "gulp-filter": "3.0.1",
+    "gulp-flatten": "0.2.0",
+    "gulp-gh-pages": "0.5.4",
+    "gulp-header": "1.7.1",
+    "gulp-htmlhint": "0.3.0",
+    "gulp-if": "2.0.0",
+    "gulp-imagemin": "2.3.0",
     "gulp-inject": "3.0.0",
-    "gulp-jasmine": "2.2.1",
-    "gulp-load-plugins": "1.1.0",
+    "gulp-istanbul-enforcer": "1.0.3",
+    "gulp-jshint": "1.11.2",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "1.2.1",
     "gulp-minify-html": "1.0.4",
+    "gulp-protractor": "1.0.0",
     "gulp-rev": "6.0.1",
-    "gulp-shell": "0.5.1",
-    "gulp-uglify": "1.5.1",
-    "gulp-usemin": "0.3.15",
+    "gulp-sass": "2.0.4",
+    "gulp-size": "2.0.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.4.2",
+    "gulp-usemin": "0.3.14",
     "gulp-util": "3.0.7",
+    "http-proxy": "1.12.0",
+    "isparta": "3.1.0",
+    "istanbul": "gotwarlost/istanbul.git#source-map",
     "jasmine": "2.3.2",
     "jasmine-async-sugar": "1.3.0",
     "jasmine-core": "2.3.4",
     "jasmine-reporters": "2.0.7",
-    "jspm": "0.16.15",
+    "jshint-stylish": "2.0.1",
+    "jspm": "0.16.13",
     "karma": "0.13.14",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "0.2.1",
+    "karma-coverage": "douglasduteil/karma-coverage#next",
+    "karma-coveralls": "1.1.2",
+    "karma-firefox-launcher": "0.1.6",
+    "karma-ie-launcher": "0.2.0",
     "karma-jasmine": "0.3.6",
     "karma-jspm": "2.0.1",
+    "karma-junit-reporter": "0.3.8",
     "karma-phantomjs-launcher": "0.2.1",
-    "live-server": "0.8.2",
-    "path": "^0.12.7",
-    "phantomjs": "1.9.18"
+    "karma-phantomjs-shim": "^1.1.2",
+    "karma-safari-launcher": "0.1.1",
+    "moment": "2.10.6",
+    "phantomjs": "1.9.18",
+    "plato": "1.5.0",
+    "pre-commit": "1.1.2",
+    "protractor": "2.5.1",
+    "protractor-html-screenshot-reporter": "0.0.21",
+    "require-dir": "0.3.0",
+    "run-sequence": "1.1.4",
+    "semver": "5.0.3",
+    "systemjs-builder": "0.14.8"
   },
   "jspm": {
+    "directories": {
+      "lib": "src"
+    },
     "configFile": "jspm.config.js",
     "dependencies": {
-      "angular": "github:angular/bower-angular@1.4.7",
-      "angular-resource": "github:angular/bower-angular-resource@1.4.7",
-      "angular-ui-router": "github:angular-ui/ui-router@0.2.15",
-      "angular2": "npm:angular2@^2.0.0-alpha.46",
-      "es6-shim": "github:es-shims/es6-shim@0.33.13",
-      "reflect-metadata": "npm:reflect-metadata@0.1.2",
-      "text": "github:systemjs/plugin-text@0.0.3",
-      "ts": "github:frankwallis/plugin-typescript@2.2.1",
-      "typescript": "npm:typescript@1.6.2",
-      "zone.js": "npm:zone.js@0.5.8"
+      "angular": "npm:angular@1.4.5",
+      "angular-animate": "npm:angular-animate@1.4.5",
+      "angular-bootstrap-colorpicker": "github:buberdds/angular-bootstrap-colorpicker@3.0.19",
+      "angular-local-storage": "npm:angular-local-storage@0.2.2",
+      "angular-messages": "npm:angular-messages@1.4.5",
+      "angular-resource": "github:angular/bower-angular-resource@^1.4.7",
+      "angular-sanitize": "npm:angular-sanitize@1.4.5",
+      "angular-ui": "github:angular-ui/bootstrap-bower@0.13.4",
+      "angular-ui-router": "npm:angular-ui-router@0.2.15",
+      "bootstrap-css-only": "github:fyockm/bootstrap-css-only@3.3.5",
+      "css": "github:systemjs/plugin-css@0.1.16",
+      "font-awesome": "npm:font-awesome@4.4.0",
+      "json": "github:systemjs/plugin-json@0.1.0",
+      "ng-bs-animated-button": "github:jeremypeters/ng-bs-animated-button@2.0.3",
+      "ng-file-upload": "npm:ng-file-upload@7.2.0",
+      "si-table": "github:simplicitylabs/si-table@0.2.3",
+      "text": "github:systemjs/plugin-text@0.0.2"
     },
     "devDependencies": {
-      "angular-mocks": "npm:angular-mocks@1.4.7",
+      "angular-mocks": "npm:angular-mocks@1.4.5",
       "babel": "npm:babel-core@5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "babel-runtime": "npm:babel-runtime@5.8.24",
+      "core-js": "npm:core-js@1.1.4"
     }
+  },
+  "license": "GPL-3.0",
+  "engines": {
+    "node": ">=0.12.x",
+    "npm": ">=2.0.0"
   }
 }
